force-app/main/default/objects/Site_Snapshot__c/Site_Snapshot__c.object-meta.xml
<CustomObject>
    <label>現場_スナップショット</label>
    <nameField>
        <displayFormat>Site-{0000}</displayFormat>
        <label>現場_スナップショット名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>