force-app/main/default/objects/Site_Snapshot__c/fields/detailTotalInContractRounded__c.field-meta.xml
<CustomField>
    <fullName>detailTotalInContractRounded__c</fullName>
    <label>当月請求金額(税抜)</label>
    <precision>17</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>