force-app/main/default/objects/Site_Snapshot__c/fields/execution__c.field-meta.xml
<CustomField>
    <fullName>execution__c</fullName>
    <label>実行日</label>
    <type>Date</type>
</CustomField>