force-app/main/default/objects/Site_Snapshot__c/fields/ST_ConstructionSite__c.field-meta.xml
<CustomField>
    <fullName>ST_ConstructionSite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>現場</label>
    <referenceTo>ST_ConstructionSite__c</referenceTo>
    <relationshipLabel>現場_スナップショット</relationshipLabel>
    <relationshipName>Site_SnapshotST_ConstructionSite</relationshipName>
    <type>Lookup</type>
</CustomField>