force-app/main/default/objects/Site_Snapshot__c/fields/targetBillingCloseDate__c.field-meta.xml
<CustomField>
    <fullName>targetBillingCloseDate__c</fullName>
    <label>対象請求締日</label>
    <type>Date</type>
</CustomField>